# backtest-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
data/: MES.csv  MNQ.csv  Mini.csv
include/: data.h  event.h  performance.h  portfolio.h  strategy.h  types.h  utils.h
include/backtest-cpp/: data.h  portfolio.h  strategy.h  types.h
src/: data.cpp  event.cpp  main.cpp  performance.cpp  portfolio.cpp  utils.cpp
strategies/: SMACrossover.cpp  smacrossover.h
tests/: test_data.cpp  test_performance.cpp  test_portfolio.cpp
